/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.api.devicemanager;

option java_package = "com.google.devtools.mobileharness.api.devicemanager.proto";
option java_outer_classname = "PersistentDeviceInfoProto";

// Persistent information of a device, which is beyond the lifecycle of a device
// runner, like Android real device chip ID.
message PersistentDeviceInfo {
  PersistentDeviceInfoKey key = 1;

  map<string, DimensionValue> dimensions = 2;

  message DimensionValue {
    repeated string value = 1;
  }
}

message PersistentDeviceInfoKey {
  KeyType key_type = 1;

  enum KeyType {
    KEY_TYPE_UNSPECIFIED = 0;
    ANDROID_REAL_DEVICE_CHIP_ID = 1;
  }

  string key = 2;
}

message PersistentDeviceInfos {
  repeated PersistentDeviceInfo infos = 1;
}
